# basedtyper

./: Cargo.toml  README.md  config_example.toml  example-wordlist.txt  example_words  wordlist.basedtyper
client/: Cargo.toml  config_example.toml  example.basedtyper
client/src/: app.rs  config.rs  input.rs  lib.rs  main.rs  parser.rs
client/src/event/: mod.rs
client/src/handlers/: connection.rs  input.rs  message.rs  mod.rs
client/src/handlers/message/: handler.rs  message.rs  mod.rs  server_message.rs
client/src/io/: event.rs  handler.rs
client/src/message/: mod.rs
client/src/ui/: mod.rs  utils.rs  wordlist.rs
server/: Cargo.toml
server/src/: app.rs  client.rs  input.rs  lib.rs  main.rs  server.rs  word.rs
server/src/handlers/: input.rs  mod.rs
server/src/message/: mod.rs  user_data.rs
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  parser.rs  utils.rs  word.rs  wordlist_generator.rs  wordlist_parser.rs
src/client/: app.rs  mod.rs  parser.rs
src/client/app/: config.rs  mod.rs
src/client/handlers/: input.rs
src/client/io/: event.rs  handler.rs  mod.rs
src/client/message/: message.rs  server_message.rs
src/client/ui/: mod.rs  utils.rs  wordlist.rs
src/handlers/: input.rs
src/io/: handler.rs
src/message/: message.rs  server_message.rs
src/server/: client.rs  mod.rs  server.rs  word.rs
src/server/handlers/: input.rs
src/server/message/: mod.rs  user_data.rs
src/ui/: mod.rs  wordlist.rs
