[package]
name = "basedtyper"
version = "0.1.0"
authors = ["bloatoo <bloatoo@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# lto = true

[dependencies]
termion = "1.5.6"
tui = "0.14.0"
reqwest = "0.10.0"
serde_json = "1.0.64"
tokio = { version = "0.2", features = ["full"] }
rand = "0.8.3"
