[package]
name = "basedtyper"
version = "0.1.0"
authors = ["bloatoo <bloatoo@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# lto = true

[dependencies]
crossterm = "0.19.0"
tokio = { version = "1.5.0", features = ["full"]}
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
ureq = "2.1.0"
serde_json = "1.0.64"
rand = "0.8"
regex = "1.4.5"
toml = "0.5.3"
serde = { features = ["derive"], version = "1.0.117" }
